# ridgeline

./: .clang-tidy  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md  licensing-info.txt
.github/workflows/: ci.yml
common/: CMakeLists.txt
common/include/common/config/: AlpineCoreConfig.h  GameConfig.h
common/include/common/utils/: string-utils.h
common/include/common/version/: version.h
common/src/config/: AlpineCoreConfig.cpp  GameConfig.cpp
core/: CMakeLists.txt
core/common/: CMakeLists.txt
core/common/include/common/config/: IniFile.h
core/common/include/common/utils/: string-utils.h
core/common/include/common/version/: version.h  version.rc
core/common/src/config/: IniFile.cpp
core/crash_handler/: CMakeLists.txt  CrashReportApp.cpp  CrashReportApp.h  config.h
core/crash_handler/res/: CrashHandler.manifest  resource.h  resources.rc  resources2.rc
core/crash_handler_stub/: crash_handler_stub.cpp
core/crash_handler_stub/include/: crash_handler_stub.h
core/launcher_runtime/: CMakeLists.txt  DllInjector.cpp  PatchedAppLauncher.cpp  UpdateChecker.cpp
core/launcher_runtime/include/launcher_runtime/: PatchedAppLauncher.h  VideoDeviceInfoProvider.h
core/module_api/: CMakeLists.txt
core/module_api/include/ridgeline/: Module.h
core/module_api/src/: ModuleRegistry.cpp
core/patch_runtime/: CMakeLists.txt  CallHook.cpp  CodeBuffer.cpp  CodeInjection.cpp  FunHook.cpp  MemUtils.cpp
core/patch_runtime/include/patch_runtime/: AsmWriter.h  CallHook.h  CallPrePostHook.h  CodeInjection.h  FunHook.h  FunPrePostHook.h  StaticBufferResizePatch.h
core/xlog/src/: SimpleFormatter.cpp
docs/: ADDING-A-MODULE.md  BUILDING.md  CHANGELOG.md  LAYOUT.md
editor_patch/: main.cpp
game_patch/: CMakeLists.txt
game_patch/graphics/: gr.cpp  gr.h
game_patch/graphics/d3d11/: gr_d3d11.cpp  gr_d3d11.h  gr_d3d11_error.cpp  gr_d3d11_hooks.cpp  gr_d3d11_hooks.h  gr_d3d11_outline.cpp  gr_d3d11_outline.h  gr_d3d11_texture.cpp
game_patch/graphics/legacy/: gr_d3d.cpp  gr_d3d_capture.cpp  gr_d3d_internal.h  gr_d3d_texture.cpp
game_patch/input/: gamepad.cpp  gamepad.h  glyph.cpp  glyph.h  gyro.cpp  gyro.h  input.h  key.cpp  mouse.cpp  mouse.h  rumble.cpp  rumble.h
game_patch/main/: main.cpp
game_patch/misc/: alpine_options.cpp  alpine_options.h  alpine_savegame.cpp  alpine_savegame.h  alpine_settings.cpp  alpine_settings.h  camera.cpp  main_menu.cpp  misc.cpp  misc.h  ui.cpp  vpackfile.cpp
game_patch/multi/: alpine_packets.cpp  multi.cpp  multi.h  network.cpp  server.cpp  server_internal.h
game_patch/object/: event.cpp  event_alpine.cpp  event_alpine.h  mesh_collision.cpp  object.cpp  object_private.h  weapon.cpp
game_patch/os/: commands.cpp  frametime.cpp  os.cpp  os.h
game_patch/rf/: ai.h  bmpman.h  clutter.h  corpse.h  entity.h  event.h  geometry.h  input.h  item.h  level.h  misc.h  mover.h  object.h  particle_emitter.h  physics.h  save_restore.h  trigger.h  vmesh.h  weapon.h
game_patch/rf/gr/: gr_direct3d.h
game_patch/rf/math/: matrix.h  quaternion.h  vector.h
game_patch/rf/os/: timer.h  timestamp.h
game_patch/rf/player/: control_config.h  player.h
launcher/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  OptionsDisplayDlg.cpp  SchemaSettingsPanel.cpp  SchemaSettingsPanel.h  launcher.manifest  launcher.rc  main.cpp
modules/alcatraz/: CMakeLists.txt
modules/alcatraz/launcher/: AlcatrazModule.cpp  CMakeLists.txt
modules/alcatraz/patch/: CMakeLists.txt  main.cpp  misc.cpp  misc.h  rendering.cpp  rendering.h
modules/us_mostwanted/: CMakeLists.txt
modules/us_mostwanted/launcher/: CMakeLists.txt  UsMwModule.cpp
modules/us_mostwanted/patch/: CMakeLists.txt  main.cpp  misc.cpp  misc.h
resources/: licensing-info.txt
tools/: addr2line.sh
